<resources>

    <!--App info-->
    <string name="app_name">Quest</string>
    <string name="app_description">Hillfort Explorer App</string>

    <!--Menu items-->
    <string name="menu_add">Add</string>
    <string name="menu_list">List</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_map">Map</string>

    <!--Fields-->
    <string name="hint_questName">Name</string>
    <string name="hint_questDate">Date</string>
    <string name="hint_questTownland">Townland</string>
    <string name="hint_questCountry">Country</string>
    <string name="hint_questLocation">Location</string>
    <string name="hint_questLong">Long</string>
    <string name="hint_questLat">Lat</string>
    <string name="hint_Description">Description</string>
    <string name="hint_Notes">Notes</string>
    <string name="hint_visited">VISITED</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_profile">Logged In User</string>
    <string name="hint_stats">Statistics</string>
    <string name="hint_no_quests">Number of Quests</string>
    <string name="hint_no_visited">Quests Visited</string>
    <string name="profile_description">Profile Description</string>

    <!--Prompts-->
    <string name="toast_promptAdd">Please fill out all fields</string>

    <!--Images-->
    <string name="select_quest_image">Select Quest Image</string>
    <string name="hillfortImage">Hillfort Image</string>

    <!--Buttons-->
    <string name="button_addImage">Select Images (up to 4)</string>
    <string name="button_changeImage">Change Image (up to 4)</string>

    <!--Maps-->
    <string name="title_activity_maps">Map</string>
    <string name="button_location">Set Location</string>
    <string name="menu_delete">Delete</string>

    <!--Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!--Buttons-->
    <string name="button_user">Select Profile Image</string>
    <string name="menu_login">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="button_delete_user">Delete Profile</string>
    <string name="button_logout">Logout</string>
    <string name="hint_nameclick">Click on marker for more information</string>
    <string name="hint_favourite">FAVOURITE</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_fav">Favourite</string>

</resources>
