<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/item_home"
            android:icon="@drawable/round_place_white_18dp"
            android:title="@string/menu_home"
            app:showAsAction="always"/>


    <item
            android:id="@+id/item_add"
            android:icon="@drawable/round_add_location_white_18dp"
            android:title="@string/menu_add"
            app:showAsAction="always"/>


    <item
            android:id="@+id/item_list"
            android:icon="@drawable/round_not_listed_location_white_18dp"
            android:title="@string/menu_list"
            app:showAsAction="always"/>


    <item
            android:id="@+id/item_setting"
            android:icon="@drawable/round_person_pin_circle_white_18dp"
            android:title="@string/menu_settings"
            app:showAsAction="always"/>



</menu>