<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.QuestActivity">


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:fitsSystemWindows="true"
                    app:elevation="0dip"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@+id/appBarLayout">

                <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbarCreate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:titleTextColor="@color/colorPrimary"
                        app:itemBackground="@color/colorAccent"
                />

            </android.support.design.widget.AppBarLayout>

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/appBarLayout"
                    android:fillViewport="true">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:ems="10"
                            android:hint="@string/hint_questName" android:id="@+id/questName"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:ems="10"
                            android:id="@+id/questDate" android:hint="@string/hint_questDate"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:ems="10"
                                android:hint="@string/hint_questTownland" android:layout_weight="1"
                                android:id="@+id/questTownland"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:ems="10"
                                android:hint="@string/hint_questCountry" android:layout_weight="1" android:id="@+id/questCountry"/>
                    </LinearLayout>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:ems="10"
                            android:hint="@string/hint_questLocation" android:id="@+id/questLocation"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:ems="10"
                                android:hint="@string/hint_questLong" android:layout_weight="1" android:id="@+id/questLongtitude"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:ems="10"
                                android:hint="@string/hint_questLat" android:layout_weight="1" android:id="@+id/questLatitude"/>
                    </LinearLayout>
                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

