<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:gravity="center_vertical|center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".activities.LoginActivity" android:background="@color/colorPrimaryDarkTransparent"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true">

    <!-- Login progress -->
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/quest_icon"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView" android:layout_margin="10dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:id="@+id/title" android:layout_gravity="center" android:textAlignment="center"
            android:contentDescription="@string/app_description" android:fontFamily="@font/advent_pro_semibold"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/app_description"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:id="@+id/description" android:layout_gravity="center" android:textAlignment="center"
            android:contentDescription="@string/app_description" android:fontFamily="@font/advent_pro_semibold"/>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center"
    >
        <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_vertical|center_horizontal">

            <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" android:padding="10dp" android:layout_gravity="center">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_margin="5dp">

                    <AutoCompleteTextView
                            android:id="@+id/useremail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" android:layout_marginTop="25dp"
                            android:layout_marginRight="10dp" android:layout_marginLeft="10dp"
                    />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_margin="5dp">

                    <EditText
                            android:id="@+id/userpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" android:layout_margin="10dp"/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <Button
                            android:id="@+id/signin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/action_sign_in"
                            android:textStyle="bold" android:theme="@style/PrimaryFlatButton"
                            android:layout_weight="1"/>
                    <Button
                            android:id="@+id/signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/action_sign_up"
                            android:textStyle="bold" android:theme="@style/PrimaryFlatButton"
                            android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>


        </ScrollView>
        <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" android:layout_gravity="center" android:layout_margin="10dp"/>
    </android.support.v7.widget.CardView>

</LinearLayout>
