<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SettingsActivity" android:background="@color/colorPrimaryDarkMoreTransparent">

    <android.support.v4.widget.DrawerLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:openDrawer="start">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            <android.support.design.widget.AppBarLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/appBarLayoutSettings"
                    android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbarSettings"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorAccent"
                        app:popupTheme="@style/AppTheme.PopupOverlay"
                        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                    android:layout_below="@id/appBarLayoutSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:orientation="vertical"
                    tools:layout_editor_absoluteX="8dp">


                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_margin="8dp" tools:cardPreventCornerOverlap="false">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:orientation="vertical">

                        <ImageView
                                android:id="@+id/profileImage"
                                android:layout_width="match_parent"
                                android:layout_height="160dp"
                                android:scaleType="centerCrop"
                                android:background="@drawable/side_nav_bar"
                                android:contentDescription="@string/profile_description" android:layout_weight="1"/>

                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="50dp">

                            <Button
                                    android:id="@+id/chooseProfileImage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/button_user"
                                    android:theme="@style/PrimaryFlatButton"/>

                            <Button
                                    android:id="@+id/deleteProfile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/button_delete_user"
                                    android:theme="@style/PrimaryFlatButton" android:layout_weight="1"/>

                            <Button
                                    android:id="@+id/logout"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/button_logout"
                                    android:theme="@style/PrimaryFlatButton" android:layout_weight="1"/>

                        </LinearLayout>

                        <View
                                android:id="@+id/divider1"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="?android:attr/listDivider"
                                android:layout_weight="1"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="14sp"
                                android:id="@+id/profile" android:layout_margin="8dp" android:layout_weight="1"
                                android:text="@string/hint_profile"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="@string/hint_username"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:id="@+id/username" android:layout_margin="15dp"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="@string/hint_password"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:id="@+id/password" android:layout_margin="15dp"/>
                        <View
                                android:id="@+id/divider"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="?android:attr/listDivider"
                                android:layout_weight="1"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="14sp"
                                android:id="@+id/stats" android:layout_margin="8dp" android:layout_weight="1"
                                android:text="@string/hint_stats"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="@string/hint_no_quests"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:id="@+id/no_quests" android:layout_margin="15dp" android:layout_weight="1"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="@string/hint_no_visited"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:id="@+id/quests_visited" android:layout_margin="15dp" android:layout_weight="1"/>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>


        <android.support.design.widget.NavigationView
                android:id="@+id/nav_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:headerLayout="@layout/nav_drawer_header"
                app:menu="@menu/activity_drawer">
        </android.support.design.widget.NavigationView>

    </android.support.v4.widget.DrawerLayout>

</android.support.constraint.ConstraintLayout>

