<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.HomeActivity"
        android:background="@drawable/side_nav_bar">

    <android.support.v4.widget.DrawerLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:openDrawer="start">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            <android.support.design.widget.AppBarLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/appBarLayoutHome"
                    android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorAccent"
                        app:popupTheme="@style/AppTheme.PopupOverlay"
                        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/nav_header_vertical_spacing"
                        app:srcCompat="@mipmap/quest_icon"
                        android:contentDescription="@string/nav_header_desc"
                        android:id="@+id/imageView2" android:layout_marginBottom="50dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp"
                        android:id="@+id/title2" android:layout_gravity="center" android:textAlignment="center"
                        android:contentDescription="@string/app_description" android:fontFamily="@font/advent_pro_semibold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/app_description"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:id="@+id/description2" android:layout_gravity="center" android:textAlignment="center"
                        android:contentDescription="@string/app_description" android:fontFamily="@font/advent_pro_semibold"/>
            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.NavigationView
                android:id="@+id/nav_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:headerLayout="@layout/nav_drawer_header"
                app:menu="@menu/activity_drawer"/>

    </android.support.v4.widget.DrawerLayout>

</android.support.constraint.ConstraintLayout>